update add token n middleware
setting on .env
