# storage/api-docs/api-docs.json
@@ -29,6 +29,13 @@
                 ],
                 "parameters": [
                     {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Token Authorization",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "name": "to",
                         "in": "query",
                         "description": "To Recieve",
